# mcpe_motd

./: Cargo.toml  LICENSE
src/: lib.rs
